--- a/BlazorTool.Client/_Imports.razor
+++ b/BlazorTool.Client/_Imports.razor
@@ -12,5 +12,5 @@
 @using Telerik.DataSource
 @using Telerik.DataSource.Extensions
 @using Microsoft.Extensions.Localization
-
+@using BlazorTool.Client.Helpers;
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
