--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -16,7 +16,7 @@
 @inject ViewSettingsService ViewSettingsService
 
 <CheckSession apiService="@apiService" UserState="@UserState" />
-<label>@Localizer["OrdersPage_Devices"]</label>
+@* <label>@Localizer["OrdersPage_Devices"]</label> *@
 
 @if (isDevicesLoading)
 {
@@ -26,13 +26,14 @@ else
 {
     <div class="filter-controls-row">
         <div>
-            <TelerikRadioGroup Data="@TagModes"
+            @* <TelerikRadioGroup Data="@TagModes"
                                @bind-Value="@TagMode"
                                ValueField="@nameof(Tags.Mode)"
                                TextField="@nameof(Tags.Description)"
                                Layout="RadioGroupLayout.Horizontal">
-            </TelerikRadioGroup>
+            </TelerikRadioGroup> *@
 
+            <label>@Localizer["OrdersPage_Devices"]</label>
             <TelerikMultiSelect Data="@devices"
                               @bind-Value="@selectedDeviceIds"
                               ValueField="@nameof(Device.MachineID)"
@@ -42,13 +43,17 @@ else
                               Placeholder="@Localizer["OrdersPage_SelectDevices"]"
                               AutoClose="false"
                               OnClose="@OnMultiValueClosed"
-                                OnChange="@(async (arg) => { if (selectedDeviceIds.Count == 0) await LoadData();})"
+                              OnChange="@(async (arg) => { if (selectedDeviceIds.Count == 0) await LoadData();})"
                               Width="500px"
+                                Filterable="true"
+                                FilterOperator="@Telerik.Blazor.StringFilterOperator.Contains"
                               ShowClearButton="true">
             </TelerikMultiSelect>
         </div>
-        <div>
-            <label>@Localizer["OrdersPage_DeviceCategory"]</label>
+        <div style="display:flex; align-items: center; gap:3px;">
+            <label>@Localizer["OrdersPage_DeviceCategory"]:</label>
+            <div style="display:inline;">
+
             <TelerikComboBox Data="@deviceCategories"
                              TextField="DeviceCategory"
                              @bind-Value="@selectedDeviceCategory"
@@ -57,6 +62,7 @@ else
                              Filterable="true"
                              OnChange="@OnCategoryChanged">
             </TelerikComboBox>
+            </div>
         </div>
     </div>
 }
@@ -213,7 +219,7 @@ else
 
     private async Task LoadData()
     {
-        isOrdersLoading = true;
+     isOrdersLoading = true;
         StateHasChanged();
         if (devices == null || devices.Count == 0)
         {
